--- a/NotesJPA/build.gradle
+++ b/NotesJPA/build.gradle
@@ -43,16 +43,24 @@ buildscript {
 }
 // define project specific dependencies
 dependencies {
-  compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.7'
+  
+   compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.7'
   compile "mysql:mysql-connector-java:5.1.47"
   compile "log4j:log4j:1.2.17"
   compile "org.hibernate:hibernate-core:$hibernateVersion"
   compile "org.hibernate:hibernate-c3p0:$hibernateVersion"
-  
-  compile 'org.junit.jupiter:junit-jupiter-api:5.0.1'
-  testCompile('org.apiguardian:apiguardian-api:1.0.0')
-  testRuntime('org.junit.jupiter:junit-jupiter-engine:5.0.1',          
-    'org.junit.vintage:junit-vintage-engine:4.12.1',
-    'org.junit.platform:junit-platform-launcher:1.0.1',
-    'org.junit.platform:junit-platform-runner:1.0.1')
+  testImplementation('org.junit.jupiter:junit-jupiter-api:5.5.2')
+   testRuntime('org.junit.jupiter:junit-jupiter-engine:5.5.2')
+   
+  //compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.7'
+  //compile "mysql:mysql-connector-java:5.1.47"
+  //compile "log4j:log4j:1.2.17"
+  //compile "org.hibernate:hibernate-core:$hibernateVersion"
+  //compile "org.hibernate:hibernate-c3p0:$hibernateVersion"
+//  compile 'org.junit.jupiter:junit-jupiter-api:5.0.1'
+  //testCompile('org.apiguardian:apiguardian-api:1.0.0')
+  //testRuntime('org.junit.jupiter:junit-jupiter-engine:5.0.1',          
+    //'org.junit.vintage:junit-vintage-engine:4.12.1',
+    //'org.junit.platform:junit-platform-launcher:1.0.1',
+    //'org.junit.platform:junit-platform-runner:1.0.1')
 }
