updates to tests and updated frontend

--- a/.gitignore
+++ b/.gitignore
@@ -8,213 +8,4 @@ bin
 .gradle
 *.war
 *.bak
-.metadata/.log
-.metadata/version.ini
-.metadata/.mylyn/repositories.xml.zip
-.metadata/.plugins/org.eclipse.core.resources/0.snap
-.metadata/.plugins/org.eclipse.core.resources/.history/11/70f30001d03e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/11/309dad57d63e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/11/d060f20bd93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/12/d02b6778b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/14/008497a9b63e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/14/d004f33ed93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/16/00655a67b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/1c/50108f22d83e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/1d/e0eced87cf3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/21/0011a758d93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/27/b0695815d63e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/2a/40c1d0e0b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/2d/50160301d03e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/2e/30812153dd3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/2e/c0b5bba7cf3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/2f/c0b5031fcf3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/3/e0036f5dda3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/31/501a0c47e13e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/38/100e6e57d43e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/3a/60d44518d03e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/3b/90cc7dc7d43e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/3c/2019903cda3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/42/1058fe06dc3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/44/30b2aba7b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/46/a0a45be4d83e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/49/90ebdd31b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/49/e072e831b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/4b/e0e867b7d43e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/4e/00e64208dc3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/4f/3036e931b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/51/20be5ceab53e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/51/90e2a1c1dc3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/51/70335d0bde3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/53/20c3db86db3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/55/b0728d9bb23e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/59/d0d29dd6b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/59/e0caf8b3b53e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/5d/50ee7717d63e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/5d/5037b428db3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/63/a071da34d83e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/64/50507a48e13e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/65/101cc5d3d43e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/6b/10f19761ae3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/6b/90af1f3fd83e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/6c/e05a5279d43e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/6d/0020d549ce3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/6d/3040fb45d93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/71/605512b5ae3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/76/50624448d83e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/77/a01f2a6ae13e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/78/4097f93ab13e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/79/4092fdc9d73e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/7b/1024ba27d43e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/7c/30051f9bcd3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/7d/a09ea8f7b03e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/7f/30d918c4e03e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/8/d0a21ce4b73e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/80/6059c3e4d33e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/80/b0b6977ad53e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/81/10821858d83e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/85/108bb3bacc3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/86/603bf3e0cf3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/88/70684dc4b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/8c/e0cbecd1cf3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/8f/30e845c4d63e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/8f/30016e82b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/8f/b00b3a53b03e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/9/7097fa1bae3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/90/504480e3ce3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/91/a01f8234b03e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/91/b026b521ba3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/92/60454b3ed43e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/95/70682c50ae3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/96/30c4eaa2b83e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/96/50bb54ffd53e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/97/409fd2c8b53e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/98/80b99a7bae3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/9a/c043315fce3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/9b/3078fa90d93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/9f/a0815268ae3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/a/f0791772d83e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/a1/c0d9bcded73e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/a3/005c873cd93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/a3/e08db7f1d73e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/a6/90d2975adb3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/a6/1004c909cc3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/a7/f0f2e105d93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/a8/10e8e831b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/ac/40c0859db23e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/b7/4005a867b83e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/b9/301c919bb23e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/b9/a0240314af3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/b9/b0a4d702cf3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/ba/e09596d2ce3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/bb/20f64fb4b63e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/bc/3014b4ace03e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/bc/205091c3d43e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/be/702a226cb23e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/c/80a2940baf3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/c/8012a85faf3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/c1/10832068d83e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/c1/a03e522ad53e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/c1/b047356bd93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/c5/708c98aeb03e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/c5/6063e7b5d43e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/c6/e05d07ecd63e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/c8/807cd944d93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/ca/a05cebecd33e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/cb/30303d5db33e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/cc/a05eee4eb83e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/cd/90cb770ad53e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/cd/1005631fd53e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/d1/e0a0564fb93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/d3/b0a747d1ce3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/d5/30ad940edd3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/d7/30d46c32b03e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/d7/2058a1ced43e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/de/b03d3d69d83e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/df/c0de13d1d43e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/e/a04ebd20b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/e1/60e6f00dcd3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/e7/309de409de3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/e7/90479b4bae3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/e8/10ed503cb53e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/e8/00361e65cc3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/ea/60e05186e03e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/ec/007ed361af3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/ed/103e579ed33e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/f0/00b122e8d33e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/f4/c0efeb68e03e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/f7/b0cfbc22db3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/f8/70539b45b93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/f8/80954218cf3e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.history/fa/b0d8f45db93e001918f48113d9b0560d
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesJPA/.markers.snap
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesJPA/.syncinfo.snap
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesJPA/.indexes/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesJPA/.indexes/7/b9/f9/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesJPA/.indexes/7/f9/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesJPA/.indexes/af/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesJPA/.indexes/e4/92/22/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesJPA/.indexes/e4/92/22/81/62/c0/3f/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesJPA/.indexes/e4/b9/22/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesJPA/.indexes/e4/b9/22/81/62/c0/3f/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesJPA/.indexes/e4/b9/db/f9/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesREST/.markers.snap
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesREST/.syncinfo.snap
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesREST/.indexes/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesREST/.indexes/7/b9/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesREST/.indexes/af/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesREST/.indexes/e4/b9/22/81/62/c0/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesREST/.indexes/e4/b9/22/81/62/c0/40/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesREST/.indexes/e4/b9/22/81/62/c0/5e/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesREST/.indexes/e4/b9/22/81/62/c0/68/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesREST/.indexes/e4/b9/22/81/62/c0/a9/history.index
-.metadata/.plugins/org.eclipse.core.resources/.projects/NotesREST/.indexes/e4/b9/db/history.index
-.metadata/.plugins/org.eclipse.core.resources/.root/.markers.snap
-.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
-.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.debug.ui.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.jdt.launching.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.jdt.ui.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.tasks.ui.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.php.debug.core.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.browser.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.workbench.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.wst.jsdt.ui.prefs
-.metadata/.plugins/org.eclipse.core.runtime/.settings/org.springsource.ide.eclipse.dashboard.ui.prefs
-.metadata/.plugins/org.eclipse.debug.ui/launchConfigurationHistory.xml
-.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
-.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/com.genuitec.eclipse.aeri.server1/server-config.json
-.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/server-config.json
-.metadata/.plugins/org.eclipse.jdt.core/1458485535.index
-.metadata/.plugins/org.eclipse.jdt.core/2217617875.index
-.metadata/.plugins/org.eclipse.jdt.core/externalLibsTimeStamps
-.metadata/.plugins/org.eclipse.jdt.core/savedIndexNames.txt
-.metadata/.plugins/org.eclipse.jdt.core/variablesAndContainers.dat
-.metadata/.plugins/org.eclipse.jdt.junit.core/history/19691231-170000.000.xml
-.metadata/.plugins/org.eclipse.jdt.junit.core/history/20190304-122642.628.xml
-.metadata/.plugins/org.eclipse.jdt.junit.core/history/20190304-122819.958.xml
-.metadata/.plugins/org.eclipse.jdt.junit.core/history/20190304-123047.202.xml
-.metadata/.plugins/org.eclipse.jdt.junit.core/history/20190304-123952.636.xml
-.metadata/.plugins/org.eclipse.jdt.junit.core/history/20190304-124215.550.xml
-.metadata/.plugins/org.eclipse.jdt.junit.core/history/20190304-124255.949.xml
-.metadata/.plugins/org.eclipse.jdt.junit.core/history/20190304-124330.820.xml
-.metadata/.plugins/org.eclipse.jdt.junit.core/history/20190304-124954.146.xml
-.metadata/.plugins/org.eclipse.jdt.launching/.install.xml
-.metadata/.plugins/org.eclipse.jdt.launching/libraryInfos.xml
-.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/0.png
-.metadata/.plugins/org.eclipse.m2e.logback.configuration/0.log
-.metadata/.plugins/org.eclipse.wst.jsdt.core/externalLibsTimeStamps
-.metadata/.plugins/org.eclipse.wst.jsdt.core/variablesAndContainers.dat
-.metadata/.plugins/org.eclipse.wst.jsdt.core/libraries/baseBrowserLibrary.js
-.metadata/.plugins/org.eclipse.wst.jsdt.core/libraries/browserWindow.js
-.metadata/.plugins/org.eclipse.wst.jsdt.core/libraries/dom5.js
-.metadata/.plugins/org.eclipse.wst.jsdt.core/libraries/system.js
-.metadata/.plugins/org.eclipse.wst.jsdt.core/libraries/xhr.js
-.metadata/.plugins/org.eclipse.wst.sse.core/task-tags.properties
-.metadata/.plugins/org.eclipse.wst.xml.core/system_catalog.xml
-.metadata/.plugins/org.springsource.ide.eclipse.dashboard.ui/feeds/dashboard.feeds.blogs/-549550714.xml
-.metadata/.plugins/org.springsource.ide.eclipse.dashboard.ui/feeds/dashboard.feeds.update/623127801.xml
-.metadata/.log
-.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
-.metadata/.plugins/org.springsource.ide.eclipse.dashboard.ui/feeds/dashboard.feeds.blogs/-549550714.xml
-.metadata/.plugins/org.springsource.ide.eclipse.dashboard.ui/feeds/dashboard.feeds.update/623127801.xml
+*.metadata
